buttons: Fix focus ring on tab for action and icon only buttons.
This commit fixes the bug where the focus ring was not visible while
tabbing through the buttons due to values being overridden. This also
fixes the outline offset for the banner close button to make it visible.

--- a/web/styles/banners.css
+++ b/web/styles/banners.css
@@ -37,6 +37,10 @@
     grid-area: banner-close-button;
     padding: 0.6875em;
     margin-left: 5px;
+
+    &:focus-visible {
+        outline-offset: -2px;
+    }
 }
 
 .navbar-alert-banner {
